--- a/scss/sections/section-featured-products.scss
+++ b/scss/sections/section-featured-products.scss
@@ -12,9 +12,6 @@
 }
 
 .page-width {
-    padding: 0 2.4rem;
-    margin: 0 auto;
-    width: 100%;
     max-width: var(--width-featured-products);
 }
 
@@ -74,6 +71,7 @@
     position: relative;
     height:100%;
     scroll-snap-align: start;
+    flex: inherit;
 }
 
 @media screen and (max-width: 749px) {
