--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -176,6 +176,10 @@ details-open {
 
 #settingsBox { 
     min-width: 30rem;
+    span {
+        display: block;
+        margin-top: 0;
+    }
 }
 
 details-open.open #settingsBox, 
@@ -236,7 +240,7 @@ details-open.open #userLinks {
     text-transform:uppercase; 
     padding:1px 10px; 
     opacity:0.6; 
-    border:1px solid var(--color-input-border); 
+    border:1px solid var(--color-input-border)!important;
     background:var(--color-input-background);
     text-decoration: none;
 }
@@ -247,6 +251,6 @@ details-open.open #userLinks {
     color:#fff; 
     opacity:1; 
     text-decoration:none; 
-    background:var(--color-secondary-button-background); 
+    background:var(--color-secondary-button-background);
 }
 
