--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -145,5 +145,6 @@
 
         <script src="{{ 'helper-functions.js' | asset_url }}" defer="defer"></script>
         <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+        <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer="defer"></script>
     </body>
 </html>
