--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -8,6 +8,7 @@
 
 {% liquid
     assign shipping_total = section.settings.shipping_total | times: 100
+    assign show_shipping = section.settings.show_shipping_total
     assign size = section.settings.img_size
     assign bg_color = section.settings.background_color
     assign title_color = section.settings.title_color
@@ -15,6 +16,8 @@
     assign link_color = section.settings.link_color
     assign link_hover_color = section.settings.link_hover_color
     assign divider_color = section.settings.divider_color
+    assign cart_note = section.settings.show_cart_note
+    assign cart_attributes = section.settings.show_cart_attributes
 %}
 
 {% capture styles %}
@@ -39,19 +42,22 @@
     <div>
         <h2 class="cart-drawer__head">{{ 'sections.cart.cart' | t }}</h2>
         <!-- Free shipping progress markup -->
-        <div
-            class="cart-drawer-shipping__wrapper js-cart-drawer-shipping"
-            data-total="{{ shipping_total }}"
-        >
-            <p class="cart-drawer-shipping__numOuter">
-                {{ 'sections.cart.shipping.outer_first' | t }}
-                <span class="cart-drawer-shipping__num"></span> {{ 'sections.cart.shipping.outer_second' | t }}
-            </p>
-            <p class="cart-drawer-shipping__success">{{ 'sections.cart.shipping.success' | t }}</p>
-            <div class="cart-drawer-shippingThreshold__bar">
-                <span class="cart-drawer-shippingThreshold__progress"></span>
+        {% if show_shipping %}
+            <div
+                class="cart-drawer-shipping__wrapper js-cart-drawer-shipping"
+                data-total="{{ shipping_total }}"
+            >
+                <p class="cart-drawer-shipping__numOuter">
+                    {{ 'sections.cart.shipping.outer_first' | t }}
+                    <span class="cart-drawer-shipping__num"></span> {{ 'sections.cart.shipping.outer_second' | t }}
+                </p>
+                <p class="cart-drawer-shipping__success">{{ 'sections.cart.shipping.success' | t }}</p>
+                <div class="cart-drawer-shippingThreshold__bar">
+                    <span class="cart-drawer-shippingThreshold__progress"></span>
+                </div>
             </div>
-        </div>
+        {% endif %}
+
         <a
             class="cart-drawer__icon-close"
             href="#CartDrawerClose"
@@ -236,99 +242,125 @@
             <span class="visually-hidden">{{ 'sections.cart.recommend' | t }}</span>
         </div>
     </div>
+
     <div class="cart-drawer__foter">
-        <div
-            class="cart-drawer__footer-toggler h4"
-            onclick="javascript:document.body.classList.toggle('cart-drawer-show-footer')"
-        >
-            {% render 'icon-plus' %}
-            {% render 'icon-minus' %}
-            {{ 'sections.cart.comments' | t }}
-        </div>
-        <div class="cart-drawer__footer-content">
-            <label class="cart-drawer__footer-title h5" for="cart_note">{{ 'sections.cart.note' | t }}</label>
-            <textarea id="cart-drawer_note" name="note" data-ajax-cart-property-input>{{ cart.note }}</textarea>
-
-            <div class="cart-drawer__footer-title h5">{{ 'sections.cart.attributes' | t }}</div>
-            <div class="cart-drawer__property">
-                <span class="cart-drawer__property-label">{{ 'sections.cart.package' | t }}</span>
-                <input
-                    type="text"
-                    name="attributes[Package text]"
-                    value="{{ cart.attributes['Package text'] }}"
-                    data-ajax-cart-property-input
-                    class="cart-drawer__input cart-drawer__input--property"
-                >
+        {% if cart_note or cart_attributes %}
+            <div
+                class="cart-drawer__footer-toggler h4"
+                onclick="javascript:document.body.classList.toggle('cart-drawer-show-footer')"
+            >
+                {% render 'icon-plus' %}
+                {% render 'icon-minus' %}
+                {{ 'sections.cart.comments' | t }}
             </div>
+            <div class="cart-drawer__footer-content">
+                {% if cart_note %}
+                    <label class="cart-drawer__footer-title h5" for="cart_note">{{ 'sections.cart.note' | t }}</label>
+                    <textarea id="cart-drawer_note" name="note" data-ajax-cart-property-input>{{ cart.note }}</textarea>
+                {% endif %}
 
-            <div class="cart-drawer__property">
-                <span class="cart-drawer__property-label">{{ 'sections.cart.delivery_day' | t }}</span>
-                <select name="attributes[Delivery day]" data-ajax-cart-property-input>
-                    {% assign suggested_days = 'Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday'
-                        | split: '|'
-                    %}
-                    <option
-                        value=""
-                        {% unless suggested_days contains cart.attributes['Delivery day'] %}
-                            selected
-                        {% endunless %}
-                    >
-                        {{ 'sections.cart.any_day' | t }}
-                    </option>
-                    {% for day in suggested_days %}
-                        <option
-                            value="{{ day }}"
-                            {% if day == cart.attributes['Delivery day'] %}
-                                selected
-                            {% endif %}
-                        >
-                            {{ day }}
-                        </option>
-                    {% endfor %}
-                </select>
-            </div>
+                {% if cart_attributes %}
+                    <div class="cart-drawer__footer-title h5">{{ 'sections.cart.attributes' | t }}</div>
+                    {%- for block in section.blocks -%}
+                        {%- case block.type -%}
+                            {%- when 'input' -%}
+                                {%- assign input = block.settings.label | escape -%}
+                                {% if input != blank %}
+                                    <div class="cart-drawer__property">
+                                        <span class="cart-drawer__property-label"> {{ input }}: </span>
+                                        <input
+                                            type="text"
+                                            name="attributes[{{ input }}]"
+                                            value="{{ cart.attributes['input']}}"
+                                            data-ajax-cart-property-input
+                                            class="cart-drawer__input cart-drawer__input--property"
+                                        >
+                                    </div>
+                                {% endif %}
+                            {%- when 'select' -%}
+                                {%- assign select_label = block.settings.label | escape -%}
+                                {%- assign select_value = block.settings.value -%}
+                                {% if select_value != blank %}
+                                    <div class="cart-drawer__property">
+                                        <span class="cart-drawer__property-label"> {{ select_label }}: </span>
+                                        <select name="attributes[select_label]" data-ajax-cart-property-input>
+                                            {% assign suggested_days = select_value | split: '|' %}
+                                            <option
+                                                value=""
+                                                {% unless suggested_days contains cart.attributes.select_label %}
+                                                    selected
+                                                {% endunless %}
+                                            >
+                                                {{ 'sections.cart.any_day' | t }}
+                                            </option>
+                                            {% for day in suggested_days %}
+                                                <option
+                                                    value="{{ day }}"
+                                                    {% if day == cart.attributes.select_label %}
+                                                        selected
+                                                    {% endif %}
+                                                >
+                                                    {{ day }}
+                                                </option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                {% endif %}
 
-            <div class="cart-drawer__property">
-                <span class="cart-drawer__property-label">{{ 'sections.cart.delivery_time' | t }}</span>
-                {% assign suggested_time = 'Any time|Day time|Evening' | split: '|' %}
-                {% for time in suggested_time %}
-                    <label>
-                        <input
-                            name="attributes[Delivery time]"
-                            type="radio"
-                            value="{{ time }}"
-                            data-ajax-cart-property-input
-                            {% if cart.attributes['Delivery time'] == time %}
-                                checked
-                            {% endif %}
-                        >
-                        {{ time }}
-                    </label>
-                {% endfor %}
-            </div>
+                            {%- when 'radio' -%}
+                                {%- assign radio_label = block.settings.label | escape -%}
+                                {%- assign radio_value = block.settings.value -%}
+                                {% if radio_value != blank %}
+                                    <div class="cart-drawer__property">
+                                        <span class="cart-drawer__property-label">{{ radio_label }}:</span>
+                                        {% assign suggested_time = radio_value | split: '|' %}
+                                        {% for time in suggested_time %}
+                                            <label>
+                                                <input
+                                                    name="attributes[{{radio_label}}]"
+                                                    type="radio"
+                                                    value="{{ time }}"
+                                                    data-ajax-cart-property-input
+                                                    {% if cart.attributes['{{radio_label}}'] == time %}
+                                                        checked
+                                                    {% endif %}
+                                                >
+                                                {{ time }}
+                                            </label>
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
 
-            <div class="cart-drawer__property">
-                <span class="ajax-cart__property-label"></span>
-                <label>
-                    <input
-                        type="hidden"
-                        value=""
-                        name="attributes[Leave at the door]"
-                        data-ajax-cart-property-input
-                    >
-                    <input
-                        type="checkbox"
-                        name="attributes[Leave at the door]"
-                        value="Yes"
-                        data-ajax-cart-property-input
-                        {% if cart.attributes['Leave at the door'] == 'Yes' %}
-                            checked
-                        {% endif %}
-                    >
-                    {{ 'sections.cart.leave' | t }}
-                </label>
+                            {%- when 'checkbox' -%}
+                                {%- assign checkbox = block.settings.label | escape -%}
+                                {% if checkbox != blank %}
+                                    <div class="cart-drawer__property">
+                                        <span class="ajax-cart__property-label"></span>
+                                        <label>
+                                            <input
+                                                type="hidden"
+                                                value=""
+                                                name="attributes[{{ checkbox }}]"
+                                                data-ajax-cart-property-input
+                                            >
+                                            <input
+                                                type="checkbox"
+                                                name="attributes[Leave at the door]"
+                                                value="Yes"
+                                                data-ajax-cart-property-input
+                                                {% if cart.attributes['{{ checkbox }}'] == 'Yes' %}
+                                                    checked
+                                                {% endif %}
+                                            >
+                                            {{ checkbox }}
+                                        </label>
+                                    </div>
+                                {% endif %}
+                        {%- endcase -%}
+                    {%- endfor -%}
+                {% endif %}
             </div>
-        </div>
+        {% endif %}
         <button type="submit" name="checkout" class="cart-drawer__checkout-btn">
             {% if settings.currency_code_enabled %}
                 {{ 'sections.cart.checkout' | t }} — {{ cart.total_price | money_with_currency }}
@@ -358,6 +390,12 @@
             "id": "shipping_total",
             "label": "Shipping Total",
             "default": 1000
+        },
+        {
+            "type": "checkbox",
+            "id": "show_shipping_total",
+            "label": "Show cart attributes",
+            "default": true
         },
         {
             "type": "select",
@@ -425,6 +463,84 @@
             "id": "divider_color",
             "default": "#4d4d4d",
             "label": "Divider color"
+        },
+        {
+            "type": "header",
+            "content": "Additional Comments "
+        },
+        {
+            "type": "checkbox",
+            "id": "show_cart_note",
+            "label": "Show cart note",
+            "default": true
+        },
+        {
+            "type": "checkbox",
+            "id": "show_cart_attributes",
+            "label": "Show cart attributes",
+            "default": true
+        }
+    ],
+    "blocks": [
+        {
+            "name": "input",
+            "type": "input",
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "label",
+                    "label": "Label",
+                    "default": "Package text"
+                }
+            ]
+        },
+        {
+            "name": "select",
+            "type": "select",
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "label",
+                    "label": "Label",
+                    "default": "Delivery day"
+                },
+                {
+                    "type": "text",
+                    "id": "value",
+                    "label": "Value",
+                    "default": "Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday"
+                }
+            ]
+        },
+        {
+            "name": "radio",
+            "type": "radio",
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "label",
+                    "label": "Label",
+                    "default": "Delivery time"
+                },
+                {
+                    "type": "text",
+                    "id": "value",
+                    "label": "Value",
+                    "default": "Any time|Day time|Evening"
+                }
+            ]
+        },
+        {
+            "name": "checkbox",
+            "type": "checkbox",
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "label",
+                    "label": "Label",
+                    "default": "Leave at the door "
+                }
+            ]
         }
     ]
 }
