--- a/sections/cart-recommend.liquid
+++ b/sections/cart-recommend.liquid
@@ -1,17 +1,21 @@
 {% assign url = canonical_url | url_decode | split: '?' %}
 {% assign url = url[1] | split: '=' %}
 {%- if url != blank -%}
-    <div class='cart-recommend__block js-cart-recommend-block'>
+    <div class="cart-recommend__block js-cart-recommend-block">
         <h3>{{ 'sections.cart.recommend' | t }}</h3>
-        <ul class='cart-recommend__list js-cart-recommend'>
-            {%- for item in url -%}
-                {% if item != 'id' %}
-                    {%- assign product = all_products[item] -%}
-                    <li class='cart-recommend__item js-cart-recommend-item'>
-                        {% render 'card-product', product: product %}
-                    </li>
-                {% endif %}
-            {%- endfor -%}
-        </ul>
+        <div class="js-recommend-swiper swiper-container">
+            <ul class="cart-recommend__list js-cart-recommend swiper-wrapper">
+                {%- for item in url -%}
+                    {% if item != 'id' %}
+                        {%- assign product = all_products[item] -%}
+                        <li class="cart-recommend__item js-cart-recommend-item swiper-slide">
+                            {% render 'card-product', product: product %}
+                        </li>
+                    {% endif %}
+                {%- endfor -%}
+            </ul>
+            <div class="swiper-button-prev">{% render 'icon-prev' %}</div>
+            <div class="swiper-button-next">{% render 'icon-next' %}</div>
+        </div>
     </div>
 {%- endif -%}
