--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -31,7 +31,7 @@
 {{ 'component-mega-menu.css' | asset_url | stylesheet_tag }}
 {{ 'component-mobile-menu.css' | asset_url | stylesheet_tag }}
 
-<sticky-header id="shopify-section-header" class="header-wrapper{{ sticky_header }} animated" style="{{- styles -}}">
+<sticky-header id="shopify-section-header" class="header-wrapper{{ sticky_header }}" style="{{- styles -}}">
     <header class="header js-header d-flex align-items-center">
         <div class="header__wrapper container">
             <div class="row">
