--- a/snippets/icon-search.liquid
+++ b/snippets/icon-search.liquid
@@ -13,7 +13,7 @@
     preserveAspectRatio="xMidYMid meet"
 >
     <g transform="translate(0.000000,24.000000) scale(0.004687,-0.004687)"
-    fill="#000000" stroke="none">
+     stroke="none">
     <path d="M1915 5109 c-728 -92 -1367 -547 -1694 -1208 -151 -305 -220 -608
     -221 -958 0 -206 19 -370 66 -553 135 -527 470 -991 934 -1293 490 -318 1114
     -425 1690 -287 300 71 623 229 859 419 l65 52 635 -635 c437 -436 645 -637
