--- a/snippets/icon-settings.liquid
+++ b/snippets/icon-settings.liquid
@@ -13,7 +13,7 @@
     preserveAspectRatio="xMidYMid meet"
 >
     <g transform="translate(0.000000,24.000000) scale(0.004687,-0.004687)"
-    fill="#000000" stroke="none">
+    stroke="none">
     <path d="M723 5100 c-70 -42 -68 -19 -71 -676 l-3 -590 -51 -13 c-130 -34
     -288 -141 -373 -253 -209 -276 -205 -650 10 -920 82 -104 238 -206 363 -239
     l52 -13 2 -1145 c3 -1081 4 -1148 21 -1179 53 -98 214 -97 261 2 14 31 16 148
