--- a/snippets/icon-user.liquid
+++ b/snippets/icon-user.liquid
@@ -13,7 +13,7 @@
     preserveAspectRatio="xMidYMid meet"
 >
     <g transform="translate(0.000000,24.000000) scale(0.004687,-0.004687)"
-    fill="#000000" stroke="none">
+    stroke="none">
     <path d="M2365 5013 c-16 -2 -75 -13 -129 -24 -496 -103 -843 -456 -951 -970
     -44 -208 -58 -601 -30 -859 40 -375 151 -693 319 -917 46 -60 186 -199 246
     -244 l34 -26 -89 -90 c-207 -207 -527 -363 -1050 -509 -225 -63 -317 -103
