--- a/scss/components/component-mega-menu.scss
+++ b/scss/components/component-mega-menu.scss
@@ -355,43 +355,11 @@
 
 .mega-menu-product-post__title {
     margin-bottom: 1rem;
+    text-transform: none;
 }
 
 .mega-menu-product-post__title a {
     text-decoration: none;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
-}
-
-.mega-menu-product-post_price .price__sale {
-    display: none;
-}
-
-.mega-menu-product-post_price dl {
-    margin-top: 0.5rem;
-    margin-bottom: 0;
-}
-
-.mega-menu-product-post_price dd {
-    margin: 0;
-}
-
-.mega-menu-product-post_price.price--on-sale .price__regular {
-    display: none;
-}
-
-.mega-menu-product-post_price.price--on-sale .price__sale {
-    display: flex;
-}
-
-.mega-menu-product-post_price.price--on-sale .price__sale dd.price__compare {
-    margin-right: 0.6rem;
-}
-
-.mega-menu-product-post_price.price--on-sale .price__sale .price-item--regular {
-    opacity: 0.7;
-}
-
-.mega-menu-product-post_price.price--on-sale .price__sale .price-item--sale {
-    color: var(--color-danger);
 }
