--- a/scss/sections/section-footer.scss
+++ b/scss/sections/section-footer.scss
@@ -78,18 +78,32 @@
     position: fixed;
     right: 3rem;
     bottom: 15%;
-    padding: 0.7rem 1rem;
-    display: inline-block;
+    padding: 0;
+    display: flex;
     -webkit-transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
     transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
+    border: none;
     opacity: 0;
     visibility: hidden;
     z-index: 1000;
+    width: 4rem;
+    height: 4rem;
+    text-align: center;
+    svg {
+        color: var(--color-white);
+        width: 1.4rem;
+        height: 1.4rem;
+        margin: auto;
+    }
+    
 }
 
 .footer__scroll-up.show {
-    opacity: 1;
+    opacity: .5;
     visibility: visible;
+    &:hover {
+        opacity: .9;
+    }
 }
 
 .footer_trigger {
