--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -74,8 +74,13 @@
 
 .header__menu--right .header__menu-item {
     position: relative;
-    > a.header__menu-item-link {
+    .header__menu-item-link {
         display: block;
+        &:hover {
+            path {
+                fill: var(--color-link-hover-text);
+            }
+        }
     }
     .icon {
         font-size: 2rem;
@@ -83,6 +88,7 @@
         height: 2.1rem;
         vertical-align: middle;
         pointer-events: none;
+        
     }
 }
 
