--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -13,7 +13,7 @@
     preserveAspectRatio="xMidYMid meet"
 >
     <g transform="translate(0.000000,24.000000) scale(0.004687,-0.004687)"
-    fill="#000000" stroke="none">
+    stroke="none">
     <path d="M2360 5105 c-202 -44 -362 -128 -507 -268 -163 -157 -281 -393 -299
     -597 -3 -36 -7 -75 -10 -87 l-4 -23 -311 0 c-348 0 -361 -2 -404 -69 -22 -35
     -29 -104 -169 -1686 -81 -907 -146 -1679 -146 -1715 1 -281 212 -532 530 -632
